--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="%BASE_URL%assets/logo-green.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Warwick AI Racing - University of Warwick's Autonomous Racing Team</title>
+    <title>Warwick Racing AI - University of Warwick's Autonomous Racing Team</title>
     <meta name="description" content="University of Warwick's autonomous racing team, pushing the boundaries of AI and engineering in motorsport." />
   </head>
   <body>
